<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:id="@+id/gpamain"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/request"
    android:textColor="#000"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/gpa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpa1"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
    android:id="@+id/gpa2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/gpa2"
    android:textColor="#000"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.103"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/gpa1"
    app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/gpa3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpa3"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gpa2"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/gpa4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpa4"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gpa3"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/gpa5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpa5"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gpa4"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="600dp"
        android:onClick="doGpaCalc"
        android:text="@string/calc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpa5"
        app:layout_constraintVertical_bias="1.0"
        android:enabled="false"/>

    <TextView
        android:id="@+id/resp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resp"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_calc"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/resp"
        app:layout_constraintStart_toEndOf="@+id/resp"
        app:layout_constraintTop_toBottomOf="@+id/btn_calc"
        app:layout_constraintVertical_bias="0.012" />

    <EditText
        android:id="@+id/eGpa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="12dp"
        android:ems="6"
        android:hint="Enter number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/gpa1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/eGpa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="4dp"
        android:ems="6"
        android:hint="Enter number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/gpa2"
        app:layout_constraintTop_toBottomOf="@+id/gpa1" />

    <EditText
        android:id="@+id/eGpa3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:ems="6"
        android:hint="Enter number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/gpa3"
        app:layout_constraintTop_toBottomOf="@+id/gpa2" />

    <EditText
        android:id="@+id/eGpa4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:ems="6"
        android:hint="Enter number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/gpa4"
        app:layout_constraintTop_toBottomOf="@+id/gpa3" />

    <EditText
        android:id="@+id/eGpa5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:ems="6"
        android:hint="Enter number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/gpa5"
        app:layout_constraintTop_toBottomOf="@+id/gpa4" />



</android.support.constraint.ConstraintLayout>
</ScrollView>